<resources>
  <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
  <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
  <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
  <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
  <string name="sign_in_success"> Welcome %s \nto Maha Periyava App</string>
  <string name="sign_out_success"> %s has successful sign out</string>
  <string name="sign_in_error">SignIn Failed</string>
  <string name="sign_in_already">You have already signin with </string>
  <string name="app_name">Periyava Radio</string>
  <string name="peetam">Peetam</string>
  <string name="acharayas">Acharayas</string>
  <string name="lineage">Lineage</string>
  <string name="apps">Apps</string>
  <string name="radio">Radio</string>
  <string name="audio">Audio</string>
  <string name="videos">Videos</string>
  <string name="photos">Photos</string>
  <string name="tv">Tv</string>
  <string name="books">Books</string>
  <string name="blog">Blog</string>
  <string name="centers">Centers</string>
  <string name="log">Anusham Log</string>
  <string name="others">Others</string>
  <string name="about_us">About Us</string>
  <string name="feedback">Feedback</string>
  <string name="rateus">Rate Us</string>
  <string name="contact_us">Contact Us</string>
  <string name="share">Share</string>
  <string name="sign_in">Sign In</string>
  <string name="sign_out">Sign Out</string>
  <string name="privacy">Privacy</string>
  <string name="acharaya68_name">Sri Chandrasekharendra Saraswati Swamigal</string>
  <string name="acharaya69_name">Sri Jayendra Saraswati Swamigal</string>
  <string name="acharaya70_name">Sri Sankara Vijayendra Saraswati Swamigal</string>
  <string name="item_1">First Item</string>
  <string name="item_2">Second Item</string>
  <string name="cd_logo">logo</string>
  <string name="open">open navigation drawer</string>
  <string name="close">close navigation drawer</string>
  <string name="action_settings">Settings</string>
  <string name="lbl_hara_hara">ஹர ஹர சங்கர ஜய ஜய சங்கர\nஹர ஹர சங்கர ஜய ஜய சங்கர</string>
  <string name="lbl_message">Jaya Jaya Shankara Hara Hara Shankara \nHara Hara Shankara Jaya Jaya Shankara</string>
  <string name="lbl_create_a_account">Create a Account</string>
  <string name="registration">Registration</string>
  <string name="lbl_help_name">Full Name</string>
  <string name="lbl_help_email">Email ID</string>
  <string name="lbl_help_contactno">Contact No</string>
  <string name="lbl_help_city">City</string>
  <string name="lbl_help_state">State</string>
  <string name="lbl_help_country">Country</string>
  <string name="lbl_help_dob">Date of Birth</string>
  <string name="lbl_help_satsang_name">Satsang Name</string>
  <string name="lbl_help_satsang_description">Satsang Description</string>
  <string name="lbl_help_contact_person_name">Contact Person</string>
  <string name="lbl_help_contact_person_no">Contact Number</string>
  <string name="next">Next</string>
  <string name="lbl_continue">Continue</string>
  <string name="lbl_set_password">Set Password</string>
  <string name="lbl_password">Password</string>
  <string name="lbl_search">Search</string>
  <string name="lbl_confirm_password">Confirm Password</string>
    <string name="lbl_password_title">Must not contain significant portions of the users account name or full name.
\nMust be at least eight (8) characters in length.
\nMust be memorized. (Note: do not write down your password).
\nMust contain at least one character from three of the following four categories:
\n\t Uppercase letters (A-Z).
\n\t Lowercase letters (a-z).
\n\t Numbers (base 10 digits 0 – 9).
\n\t Non-alphabetic characters (` ~ ! @ # $ % ^ &amp; * - + = | \ { }
 \n\t\t[ ] : ; " \\' &gt; &lt; , . ? /)..</string>
  <string name="logout">Logout</string>
  <string name="loginText">Please login with your Google Account</string>
  <string name="lbl_sign_title">Sign in to get the most out of this app.</string>
  <string name="lbl_googleplus">Google+</string>
  <string name="lbl_facebook">Facebook</string>
  <string name="lbl_registration">Registration</string>
  <string name="lbl_register_with">Register With:</string>
  <string name="lbl_login_with">Login With:</string>
  <string name="lbl_message_title">Maha Perivaya Message</string>
    <string name="lbl_message_content">
\n1. One of our duties as human beings is to avail ourselves of every opportunity to do good to others. The poor can serve others by their loyal work to the country and the rich by their wealth to help the poor. Those who are influential can use their influence to better the condition of the lowly. That way we can keep alive in our hearts a sense of social service.
\n\n2. Man by himself cannot create even a blade of grass. We will be guilty of gross ingratitude if we do not offer first to God what we eat or wear – only the best and choicest should be offered to Him.
\n\n3. Life without love is a waste. Everyone should cultivate “Prema” or love towards all human beings, bird and beast.
\n\n4. Wealth amassed by a person whose heart is closed to charity, is generally dissipated by the inheritors: but the family of philanthropists will always be blessed with happiness.
\n\n5. A person who has done a meritorious deed will lose the resulting merit if he listens to the praise of others or himself boasts of his deeds.
\n\n6. It will do no good to grieve over what has happened. If we learn to discriminate between good and evil, that will guard us from falling into the evil again.
\n\n7. We should utilize to good purpose, the days of our life-time. We should engage ourselves in acts, which will contribute to the welfare of others rather than to our selfish desires.
\n\n8. We should perform duties that have been prescribed for our daily life and also be filled with devotion to God.
\n\n9. One attains one’s goal by performance of one’s duties.
\n\n10. Jnana is the only solvent of our troubles and sufferings.  </string>
  <string name="lbl_about_title">About</string>
    <string name="lbl_about_content">
      &lt;p&gt;Kanchi Guruparampara Foundation, a non-profit organization registered in USA, is founded to spread the teachings of acharyas of Sri Kanchi Kamakoti Peetam, Kanchipuram. The foundation\’s primary objectives are to support vedic education, gho rakshanam and temple renovations. This mobile portal has been designed to host several useful applications related to the teachings of Sanatana dharma that helps devotees to progress in their spiritual journey.
      &lt;/p&gt;&lt;p&gt;We hope that this app will help you build bakthi towards Kanchi acharayaas and their teachings. We hope you enjoy this application. Please feel free to share this with your friends and family. And also please send us your feedback and suggestions by using the \"Feedback\" menu available in this app.
      &lt;/p&gt;&lt;p&gt;For more informations, please visit &lt;a href=\"http://kgpfoundation.org\"&gt; kgpfoundation.org &lt;/a&gt;
      &lt;/p&gt;&lt;p&gt;Hara Hara Sankara Jaya Jaya Sankara!
      &lt;/p&gt;
</string>
  <string name="lbl_signin">Sign in </string>
  <string name="lbl_signout">Sign Out</string>
  <string name="lbl_activities">Activities</string>
  <string name="lbl_sahasra_gayathri_counter">Sahasra Gayathri Counter</string>
  <string name="lbl_anusham_pooja_finder">Anusham Pooja Finder</string>
  <string name="lbl_devithin_kural_finder">Devithin Kural Finder</string>
  <string name="lbl_books">Books</string>
  <string name="lbl_gallery">Photos</string>
  <string name="lbl_videos">Videos</string>
  <string name="lbl_online_radio">Periyava Radio</string>
  <string name="lbl_settings">Setting</string>
  <string name="lbl_feedback">Feedback</string>
  <string name="lbl_about">About us</string>
  <string name="lbl_already_login">Already have an account? &lt;u&gt;&lt;b&gt;Log in&lt;/b&gt;&lt;/u&gt;</string>
  <string name="lbl_do_you_want_register">Do you want to &lt;u&gt;&lt;b&gt;Register&lt;/b&gt;&lt;/u&gt; ?</string>
  <string name="lbl_forgot_password">&lt;u&gt;&lt;b&gt;Forgot Password&lt;/b&gt;&lt;/u&gt;</string>
  <string name="lbl_rember_email_id">Remember my email id.</string>
  <string name="lbl_later">Later</string>
  <string name="lbl_statical_information">Japam Information</string>
  <string name="lbl_submit_week_count">Submit Your Weekly Japam Count </string>
  <string name="lbl_counts">Week Count </string>
  <string name="lbl_date">Date </string>
  <string name="action_general">General</string>
  <string name="action_save">Save</string>
  <string name="action_login">Login</string>
</resources>